--- a/LoydCrafts.WebSite/Properties/launchSettings.json
+++ b/LoydCrafts.WebSite/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "LoydCrafts.WebSite": {
+    "ReuseSU.WebSite": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
